# LLEGO

./: .gitignore  LICENSE  README.md  install_external.sh  pyproject.toml
.github/workflows/: python-app.yml
analysis/: read_results.ipynb
analysis/artifacts/: all_classification_results.csv  all_regression_results.csv  summary_classification_results.csv  summary_regression_results.csv
configs/: README.md  baselines.yaml  gatree.yaml  llego.yaml
configs/baseline/: c45.yaml  cart.yaml  cart_reg.yaml  dl85.yaml  gosdt.yaml
configs/baseline/hpt/: C45_HPT.yaml  CART_HPT.yaml  CART_REG_HPT.yaml  DL85_HPT.yaml  GOSDT_HPT.yaml  gatree_HPT.yaml
configs/crossover/: default.yaml
configs/dataset/: abalone.yaml  breast.yaml  cars.yaml  cholesterol.yaml  compas.yaml  credit-g.yaml  cutract.yaml  diabetes.yaml  heart-statlog.yaml  liver.yaml  maggic.yaml  seer.yaml  vehicle.yaml  wage.yaml  wine.yaml
configs/endpoint/: default.yaml
configs/fitness_eval/: default.yaml
configs/hof/: default.yaml
configs/metrics_logger/: default.yaml
configs/mutation/: default.yaml
configs/pop_init/: default.yaml
configs/prompts/: default.yaml
configs/selection/: default.yaml
configs/selection/filter/: default.yaml
experiments/: exp_baselines.py  exp_gatree.py  exp_llego.py  run_baselines.sh  run_gatree.sh  run_llego.sh
src/baselines/: BaseModel.py  C45.py  CART.py  DL85.py  GOSDT.py  gatree_algorithm.py
src/baselines/utils/: gatree_utils.py
src/llego/: llego_algorithm.py
src/llego/custom/: fitness_evaluation.py  generic_tree.py  llm_output_parser.py  parsing_to_dict.py  parsing_to_string.py  population_initialization.py  tree_validation.py
src/llego/operators/: crossover_operator.py  evolutionary_operator.py  filter_operator.py  hof.py  individual.py  metrics_logger.py  mutation_operator.py  offspring_selector.py  parent_sampler.py  selection_operator.py
src/llego/utils/: llm_api.py  tree.py
src/utils/: data_utils.py  eval_utils.py  extraction.py  private_data_loader.py  save_utils.py  tune_models.py  wandb.py
tests/: test_fitness_evaluation.py  test_metrics_logger.py  test_selection_operator.py
